--- a/hosts.ini
+++ b/hosts.ini
@@ -1,6 +1,9 @@
-[jenkins_servers]
-server1 ansible_host=52.91.221.160
-server2 ansible_host=54.235.26.220
+[jenkins-servers]
+107.23.254.76
+[dev]
+3.84.32.89
+[docker]
+3.84.35.235
 [all:vars]
 ansible_user=ubuntu
 ansible_ssh_private_key_file=/home/labuser/terraform/key.pem
